--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.database=movies-api-db
+spring.data.mongodb.uri=mongodb+srv://shivamnahar09:RnUAQKeDqcGvEkZa@cluster0.lqtew8m.mongodb.net/
