--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.database=movies-api-db
-spring.data.mongodb.uri=mongodb+srv://shivamnahar09:RnUAQKeDqcGvEkZa@cluster0.lqtew8m.mongodb.net/
+spring.data.mongodb.database=${env.MONGO_DATABASE}
+spring.data.mongodb.uri=mongodb+srv://${env.MONGO_USER}:${env.MONGO_PASSWORD}@${env.MONGO_CLUSTER}/
